--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </select>
     </div>
    
-    <script src="/app.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
     
 </body>
 </html>
